--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -8,11 +8,12 @@ body {
   background: #090979;
   background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%); }
 
-.nav-pills .nav-link {
-  border: 1px solid white;
-  margin: 5px; }
-  .nav-pills .nav-link.active, .nav-pills .nav-link:hover {
-    box-shadow: 0 0 5px white; }
+.nav-pills {
+  border: none; }
+  .nav-pills .nav-link {
+    margin: 5px; }
+    .nav-pills .nav-link.active, .nav-pills .nav-link:hover {
+      box-shadow: 0 0 5px white; }
 
 .nav-tabs .nav-link {
   border: 1px solid transparent; }
@@ -77,26 +78,14 @@ a, button {
   color: white;
   /* White text */ }
 
-#insertNewPerson {
-  z-index: 2000 !important; }
-
-#insertNewDepartment {
-  z-index: 2000 !important; }
-
-#insertNewLocation {
-  z-index: 2000 !important; }
-
-#editEmployeeConfirmToast {
-  z-index: 9999 !important; }
-
 #navbar {
   margin-top: 0;
   padding: 10px;
-  border-bottom: 1px solid white;
   border-radius: 0 0 10px 10px;
   position: sticky;
   top: 0;
-  z-index: 1000; }
+  z-index: 1000;
+  opacity: 0.7; }
 
 #main {
   background: #090979;
@@ -116,8 +105,8 @@ a, button {
   position: sticky; }
 
 .tab-content {
-  min-height: 500px;
-  overflow: hidden; }
+  min-height: 700px;
+  overflow: scroll; }
 
 .table-wrapper table, .table-wrapper-scroll-y table {
   min-width: 100%; }
@@ -150,22 +139,25 @@ nav.navbar {
   font-size: 1.8rem; }
 
 .table-wrapper, .table-wrapper-scroll-y {
-  min-height: 500px; }
+  max-height: 500px; }
   .table-wrapper table, .table-wrapper-scroll-y table {
     min-width: 100%; }
-    .table-wrapper table th, .table-wrapper table td, .table-wrapper-scroll-y table th, .table-wrapper-scroll-y table td {
+    .table-wrapper table th, .table-wrapper-scroll-y table th {
       min-height: 50px;
       text-align: center; }
+    .table-wrapper table td, .table-wrapper-scroll-y table td {
+      min-height: 50px;
+      text-align: left; }
 
 .tab-pane {
-  transition: opacity 0.8s ease-in-out; }
+  transition: opacity 0.5s ease-in-out; }
   .tab-pane.fade {
     opacity: 0;
     display: block;
     height: 0;
     overflow: hidden; }
   .tab-pane.show {
-    opacity: .9;
+    opacity: .8;
     height: auto;
     overflow: visible; }
 
@@ -181,9 +173,6 @@ nav.navbar {
     left: 0;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
     z-index: -1; }
-
-#locationTable .action-buttons button {
-  margin-right: 5px; }
 
 @media only screen and (max-width: 768px) {
   table {
