--- a/libs/scss/styles.scss
+++ b/libs/scss/styles.scss
@@ -13,21 +13,69 @@ body {
 background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
 }
 
-// Existing styles for .nav-pills
-.nav-pills {
-  border: none;
+#company-directory-heading {
+  color: rgb(200, 215, 255);
+  text-shadow: 0 0 4px white, 0 0 3px rgb(113, 234, 255), 0 0 3px rgb(0, 0, 0);
+  text-align: center;  // Centers the text
+  margin-top: 5%;  // Adds some space at the top
+  margin-bottom: -5%;
+  // margin-bottom: 10px;  // Adds some space at the bottom
+  font-size: 4em;  // Sets the font size
+  // font-weight: bold;  // Makes the text bold
+}
 
-  .nav-link {
+#company-directory-footer {
+  text-align: center;
+  padding: 20px;
+  color: #fff;
 
-    // border: 1px solid white;
-    margin: 5px;
-    
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+  }
 
-    &.active, &:hover {
-      box-shadow: 0 0 5px white;
+  #icon-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.5em;  // Increase the font size for bigger icons
+
+      &:hover {
+        color: #ccc;
+      }
     }
   }
 }
+
+
+
+
+// Updated styles for .nav-pills
+.nav-pills {
+  border: none;
+
+  .nav-item {
+    .nav-link {
+      margin: 5px;
+
+      // Increase the font size for bigger icons
+      i.fas {
+        font-size: 2em;
+      }
+
+      &.active, &:hover {
+        box-shadow: 0 0 5px white;
+      }
+    }
+  }
+}
+
 
 // Additional styles for .nav-tabs
 .nav-tabs {
@@ -53,6 +101,154 @@ a, button {
   }
 }
 
+// New #navbar styles
+#navbar {
+  margin-top: 0;  // No top margin as it's a navbar
+  padding: 10px;  // Similar padding to #main
+  border-radius: 0 0 10px 10px;  // Rounded corners at the bottom
+  position: sticky;  // Make it stick to the top
+  top: 0;  // Stick to the top of the page
+  z-index: 1000;  // High z-index to make sure it's above other content
+  opacity: 0;
+
+}
+
+
+#main {
+  // background: rgb(9,9,121);
+// background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+  margin-top: 10vh;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 100%;
+  // border: 1px solid white;
+  border-radius: 10px;
+  position: sticky;  
+}
+
+.nav-link {
+  font-weight: bold;
+}
+
+
+
+
+#searchAndFilter, #icons {
+  display: flex;
+}
+
+#addButton {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 0 0 2px white;
+  border-radius: 1px;
+}
+
+#modalTitle {
+  border-radius: 8px;
+  box-shadow: 0px 1px 4px rgba(29, 42, 155, 0.904);
+}
+
+nav.navbar {
+  box-shadow: 0px 1px 2px rgba(16, 0, 107, 0.1);
+
+  a.navbar-brand {
+    text-shadow: 0 0 2px rgb(11, 10, 70);
+    transition: 0.3s ease-in-out;
+  }
+}
+
+#header {
+  color: rgb(8, 77, 182);
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+#tableHead {
+  position: sticky;
+  
+}
+
+.table-wrapper, .table-wrapper-scroll-y {
+  border-radius: 8px;
+
+  table {
+    min-width: 100%;  // Ensures that the table takes up the full width of the container
+    th, td {
+      min-height: 50px;  // Adjust this value based on your needs
+      text-align: center;
+    }
+  }
+}
+
+// Ensure all tables have the same height
+.table-wrapper, .table-wrapper-scroll-y {
+  height: 43.75em;  // Converted from 700px
+  overflow-y: auto;
+
+  table {
+    min-width: 100%;
+
+    th, td {  // Combine similar styles
+      min-height: 3.125em;  // Converted from 50px
+      text-align: center;
+    }
+
+    td {
+      text-align: left;
+    }
+
+    // Fixed width for 'Actions' column
+    th:last-child, td:last-child {
+      width: 110px;
+    }
+  }
+}
+
+
+
+
+
+
+.tab-pane {
+  transition: opacity 0.5s ease-in-out; // Existing transition style
+  overflow-y: auto; // Enable vertical scroll
+
+  &.fade {
+    opacity: 0;
+    display: block; // Ensures the pane can transition in
+    height: 0; 
+    overflow: hidden; // Ensures content doesn't spill
+  }
+
+  &.show {
+    opacity: .8;
+    height: auto; // Allows content to expand
+    overflow-y: auto; // Enable vertical scroll when content expands
+  }
+}
+
+
+
+.btn-primary {
+  position: relative;
+  z-index: 1;
+
+  // Pseudo-element for gradient
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(0,0,0,0.1));
+    z-index: -1;
+  }
+}
+
+// Toast styling
+
 #myToast, #editLocationConfirmToast, #confirmEmployeeDelete, #editEmployeeConfirmToast, #confirmDeptDelete, #confirmLocationDelete, #successToast, #editDeptConfirmToast {
   position: fixed;
   top: 50%;
@@ -61,7 +257,6 @@ a, button {
   opacity: 0.9;
   z-index: 1050; // To make sure it appears above modals
 }
-
 
 /* Custom Red Toast */
 .toast-red {
@@ -102,207 +297,26 @@ a, button {
 }
 
 
+@media (max-width: 768px) {
 
-
-
-
-
-
-// #insertNewPerson {
-//   z-index: 2000 !important;
-// }
-
-// #insertNewDepartment {
-//   z-index: 2000 !important;
-// }
-
-// #insertNewLocation {
-//   z-index: 2000 !important;
-// }
-
-// #editEmployeeConfirmToast {
-//   z-index: 9999 !important; // Set a high value to ensure it appears above all other elements
-// }
-
-
-// New #navbar styles
-#navbar {
-  margin-top: 0;  // No top margin as it's a navbar
-  padding: 10px;  // Similar padding to #main
-  border-radius: 0 0 10px 10px;  // Rounded corners at the bottom
-  position: sticky;  // Make it stick to the top
-  top: 0;  // Stick to the top of the page
-  z-index: 1000;  // High z-index to make sure it's above other content
-  opacity: 0.7;
-
-}
-
-
-#main {
-  background: rgb(9,9,121);
-background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
-  margin-top: 10vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  height: 100%;
-  border: 1px solid white;
-  border-radius: 10px;
-  position: sticky;  
-}
-
-.nav-link {
-  font-weight: bold;
-}
-
-
-
-#tableHead {
-  position: sticky;
-  
-}
-// New styles for consistent tab content size
-.tab-content {
-  min-height: 700px;  // Adjust this value based on your needs
-  overflow: scroll;
-}
-
-.table-wrapper, .table-wrapper-scroll-y {
-  table {
-    min-width: 100%;  // Ensures that the table takes up the full width of the container
-    th, td {
-      min-height: 50px;  // Adjust this value based on your needs
-      text-align: center;
-    }
-  }
-}
-
-
-
-#searchAndFilter, #icons {
-  display: flex;
-}
-
-#addButton {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  box-shadow: 0 0 2px white;
-  border-radius: 1px;
-}
-
-#modalTitle {
-  border-radius: 8px;
-  box-shadow: 0px 1px 4px rgba(29, 42, 155, 0.904);
-}
-
-nav.navbar {
-  box-shadow: 0px 1px 2px rgba(16, 0, 107, 0.1);
-
-  a.navbar-brand {
-    text-shadow: 0 0 2px rgb(11, 10, 70);
-    transition: 0.3s ease-in-out;
-  }
-}
-
-#header {
-  color: rgb(8, 77, 182);
-  font-weight: bold;
-  font-size: 1.8rem;
-}
-
-// Ensure all tables have the same height
-.table-wrapper, .table-wrapper-scroll-y {
-  max-height: 500px;  // Adjust based on your requirements
-  table {
+  #company-directory-heading {
     
-    min-width: 100%;
-
-    th {
-      min-height: 50px;
-      text-align: center;
-    }
-
-    td {
-      min-height: 50px;
-      text-align: left;
-    }
-  }
-}
-
-.tab-pane {
-  transition: opacity 0.5s ease-in-out; // Add this line for transition
-  &.fade {
-    opacity: 0;
-    display: block; // Ensures the pane can transition in
-    height: 0; 
-    overflow: hidden; // Ensures content doesn't spill
-  }
-  &.show {
-    opacity: .8;
-    height: auto; // Allows content to expand
-    overflow: visible; // Allows content to be seen
-  }
-}
-
-
-.btn-primary {
-  position: relative;
-  z-index: 1;
-
-  // Pseudo-element for gradient
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(0,0,0,0.1));
-    z-index: -1;
-  }
-}
-
-
-// Reduce spacing between action buttons
-// #locationTable .action-buttons {
-//   button {
-//     margin-right: 2px;  // Adjust based on your requirements
-//   }
-// }
-
-// Media Query for Mobile Devices
-@media only screen and (max-width: 768px) {  // You can adjust this breakpoint
-  // Reduce font-size for table content
-  table {
-    font-size: 0.6rem;  // Reduce the font size
-    th, td {
-      padding: 4px;  // Reduce padding to fit content
-    }
+    margin-bottom: -15%;  // Adds some space at the bottom
+    font-size: 2em;  // Sets the font size
   }
 
-  // Reduce font-size for other elements if needed
-  .nav-link, button, #header {
-    font-size: 1.8rem;  // Reduce the font size for navigation links, buttons, and header
+  .table-wrapper-scroll-y, .table-wrapper {
+    height: 30.75em;  // Converted from 700px
+
+    overflow-x: auto;
   }
 
-  // Additional styling adjustments for mobile
-  // ...
-}
-
-// Media Query for Small Mobile Devices
-@media only screen and (max-width: 500px) {  // Adjust this breakpoint as needed
-  // Further reduce font-size for table content
-  table {
-    font-size: 0.6rem;  // Even smaller font size
-    th, td {
-      padding: 1px;  // Reduced padding
-    }
+  table th, table td {
+    font-size: 0.8em;  // Optional: Reduce font size
   }
 
-  // Further reduce font-size for other elements
-  .nav-link, button, #header {
-    font-size: 1.2rem;  // Further reduced font size
+  // Hide certain columns for smaller screens if needed
+  .tableHide {
+    display: none;
   }
-
-  // Additional styling adjustments for small screens
-  // ...
 }
