--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -2,10 +2,56 @@
 * {
   font-family: 'Poppins', sans-serif;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1); }
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html, body {
+  margin: 0;
+  padding: 0; }
 
 body {
   background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%); }
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%);
+  z-index: 9999; }
+  #preloader .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    height: 150px;
+    border: 15px solid #090979;
+    border-radius: 50%;
+    border-top-color: #00fff9;
+    animation: spin 1s linear infinite, color-change 2s linear infinite;
+    transform: translate(-50%, -50%) rotate(0deg);
+    box-sizing: border-box;
+    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #00fff9, 0 0 100px #00fff9, 0 0 120px #00fff9, 0 0 150px #00fff9, 0 0 200px #00fff9; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+@keyframes color-change {
+  0% {
+    border-top-color: #00fff9;
+    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; }
+  50% {
+    border-top-color: #ffffff;
+    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff; }
+  100% {
+    border-top-color: #00fff9;
+    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; } }
 
 #company-directory-heading {
   color: #c8d7ff;
@@ -217,40 +263,3 @@ nav.navbar {
     font-size: 0.8em; }
   .tableHide {
     display: none; } }
-
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%);
-  z-index: 9999; }
-  #preloader .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 150px;
-    height: 150px;
-    border: 15px solid #090979;
-    border-radius: 50%;
-    border-top-color: #00fff9;
-    animation: spin 1s linear infinite, color-change 2s linear infinite;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #00fff9, 0 0 100px #00fff9, 0 0 120px #00fff9, 0 0 150px #00fff9, 0 0 200px #00fff9; }
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-
-@keyframes color-change {
-  0% {
-    border-top-color: #00fff9;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; }
-  50% {
-    border-top-color: #ffffff;
-    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff; }
-  100% {
-    border-top-color: #00fff9;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; } }
