--- a/libs/scss/styles.scss
+++ b/libs/scss/styles.scss
@@ -6,10 +6,80 @@
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all text
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all boxes
   
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  
+  
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
 background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+}
+
+// Preloader 
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+  z-index: 9999;
+  .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    height: 150px;
+    border: 15px solid rgba(9,9,121,1);
+    border-radius: 50%;
+    border-top-color: #00fff9;
+    animation: spin 1s linear infinite, color-change 2s linear infinite;
+    transform: translate(-50%, -50%) rotate(0deg);
+    box-sizing: border-box; // Added this line
+    // Enhanced box-shadow
+  box-shadow: 
+  0 0 10px #00fff9,  // Slight glow
+  0 0 30px #00fff9,  // Medium glow
+  0 0 60px #00fff9,  // Strong glow
+  0 0 100px #00fff9, // Very strong glow
+  0 0 120px #00fff9, // Intense glow
+  0 0 150px #00fff9, // Extremely intense glow
+  0 0 200px #00fff9; // Maximum glow
+}
+
+  
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes color-change {
+  0% {
+    border-top-color: #00fff9;  // Neon blue
+    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
+  }
+  50% {
+    border-top-color: #ffffff;  // White
+    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff;
+  }
+  100% {
+    border-top-color: #00fff9;  // Neon blue
+    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
+  }
 }
 
 #company-directory-heading {
@@ -330,61 +400,5 @@ th:last-child, td:last-child {
 }
 
 
-// Preloader 
 
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
-  z-index: 9999;
-  .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 150px;
-    height: 150px;
-    border: 15px solid rgba(9,9,121,1) ;
-    border-radius: 50%;
-    border-top-color: #00fff9;  // Neon blue color
-    animation: spin 1s linear infinite, color-change 2s linear infinite;
-    // Enhanced box-shadow
-  box-shadow: 
-  0 0 10px #00fff9,  // Slight glow
-  0 0 30px #00fff9,  // Medium glow
-  0 0 60px #00fff9,  // Strong glow
-  0 0 100px #00fff9, // Very strong glow
-  0 0 120px #00fff9, // Intense glow
-  0 0 150px #00fff9, // Extremely intense glow
-  0 0 200px #00fff9; // Maximum glow
-}
-
-  
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes color-change {
-  0% {
-    border-top-color: #00fff9;  // Neon blue
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
-  }
-  50% {
-    border-top-color: #ffffff;  // White
-    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff;
-  }
-  100% {
-    border-top-color: #00fff9;  // Neon blue
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
-  }
-}
 
