UI fix, removed table headers, added refresh/alter/add buttons, flex implemented

--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,71 +1,24 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css';
-* {
-  font-family: 'Poppins', sans-serif;
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-html, body {
-  margin: 0;
-  padding: 0; }
-
+html,
 body {
-  background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%); }
+  background-color: #f9f6ee;
+  margin: 5px;
+  overflow: hidden; }
 
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(circle, #090979 5%, #050236 80%, #050236 80%);
-  z-index: 9999; }
-  #preloader .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 150px;
-    height: 150px;
-    border: 15px solid #090979;
-    border-radius: 50%;
-    border-top-color: #00fff9;
-    animation: spin 1s linear infinite, color-change 2s linear infinite;
-    transform: translate(-50%, -50%) rotate(0deg);
-    box-sizing: border-box;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #00fff9, 0 0 100px #00fff9, 0 0 120px #00fff9, 0 0 150px #00fff9, 0 0 200px #00fff9; }
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-
-@keyframes color-change {
-  0% {
-    border-top-color: #00fff9;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; }
-  50% {
-    border-top-color: #ffffff;
-    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff; }
-  100% {
-    border-top-color: #00fff9;
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9; } }
-
-#company-directory-heading {
-  color: #c8d7ff;
-  text-shadow: 0 0 4px white, 0 0 3px #71eaff, 0 0 3px black;
-  text-align: center;
-  margin-top: 5%;
-  margin-bottom: -5%;
-  font-size: 4em; }
+section {
+  background-color: #f9f6ee;
+  display: flex;
+  flex-flow: column;
+  height: calc(100vh - 20px); }
 
 #company-directory-footer {
   text-align: center;
   padding: 20px;
-  color: #fff; }
+  color: #fff;
+  box-shadow: none;
+  border: none; }
   #company-directory-footer p {
+    color: #1d0707;
     margin: 0;
     padding: 0;
     font-size: 1em; }
@@ -75,11 +28,11 @@ body {
     align-items: center;
     gap: 20px; }
     #company-directory-footer #icon-row a {
-      color: #fff;
+      color: #775959;
       text-decoration: none;
       font-size: 1.5em; }
       #company-directory-footer #icon-row a:hover {
-        color: #ccc; }
+        color: #1d0707; }
 
 .nav-pills {
   border: none; }
@@ -112,14 +65,6 @@ a, button {
   z-index: 1000;
   opacity: 0; }
 
-#main {
-  margin-top: 10vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  height: 100%;
-  border-radius: 10px;
-  position: sticky; }
-
 .nav-link {
   font-weight: bold; }
 
@@ -137,11 +82,6 @@ nav.navbar {
   nav.navbar a.navbar-brand {
     text-shadow: 0 0 2px #0b0a46;
     transition: 0.3s ease-in-out; }
-
-#header {
-  color: #084db6;
-  font-weight: bold;
-  font-size: 1.8rem; }
 
 #tableHead {
   position: sticky; }
