--- a/libs/scss/styles.scss
+++ b/libs/scss/styles.scss
@@ -1,104 +1,107 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css';
 
-// Global Styles
-* {
-  font-family: 'Poppins', sans-serif;  // Setting Poppins as the primary font
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all text
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all boxes
+// // Global Styles
+// * {
+//   font-family: 'Poppins', sans-serif;  // Setting Poppins as the primary font
+//   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all text
+//   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);  // Slight shadow for all boxes
   
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+//     margin: 5;
+//     padding: 5;
+//     box-sizing: border-box;
   
   
-}
+// }
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
+html,
 body {
-background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+  background-color: #f9f6ee;
+  margin: 5px;
+  overflow: hidden;
 }
+
+section {
+  background-color: #f9f6ee;
+  display: flex;
+  flex-flow: column;
+  height: calc(100vh - 20px);
+}
+
+// body {
+// background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+// }
 
 // Preloader 
 
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
-  z-index: 9999;
-  .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 150px;
-    height: 150px;
-    border: 15px solid rgba(9,9,121,1);
-    border-radius: 50%;
-    border-top-color: #00fff9;
-    animation: spin 1s linear infinite, color-change 2s linear infinite;
-    transform: translate(-50%, -50%) rotate(0deg);
-    box-sizing: border-box; // Added this line
-    // Enhanced box-shadow
-  box-shadow: 
-  0 0 10px #00fff9,  // Slight glow
-  0 0 30px #00fff9,  // Medium glow
-  0 0 60px #00fff9,  // Strong glow
-  0 0 100px #00fff9, // Very strong glow
-  0 0 120px #00fff9, // Intense glow
-  0 0 150px #00fff9, // Extremely intense glow
-  0 0 200px #00fff9; // Maximum glow
-}
+// #preloader {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
+//   z-index: 9999;
+//   .spinner {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     width: 150px;
+//     height: 150px;
+//     border: 15px solid rgba(9,9,121,1);
+//     border-radius: 50%;
+//     border-top-color: #00fff9;
+//     animation: spin 1s linear infinite, color-change 2s linear infinite;
+//     transform: translate(-50%, -50%) rotate(0deg);
+//     box-sizing: border-box; // Added this line
+//     // Enhanced box-shadow
+//   box-shadow: 
+//   0 0 10px #00fff9,  // Slight glow
+//   0 0 30px #00fff9,  // Medium glow
+//   0 0 60px #00fff9,  // Strong glow
+//   0 0 100px #00fff9, // Very strong glow
+//   0 0 120px #00fff9, // Intense glow
+//   0 0 150px #00fff9, // Extremely intense glow
+//   0 0 200px #00fff9; // Maximum glow
+// }
 
   
-}
+// }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+// @keyframes spin {
+//   0% {
+//     transform: rotate(0deg);
+//   }
+//   100% {
+//     transform: rotate(360deg);
+//   }
+// }
 
-@keyframes color-change {
-  0% {
-    border-top-color: #00fff9;  // Neon blue
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
-  }
-  50% {
-    border-top-color: #ffffff;  // White
-    box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff;
-  }
-  100% {
-    border-top-color: #00fff9;  // Neon blue
-    box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
-  }
-}
+// @keyframes color-change {
+//   0% {
+//     border-top-color: #00fff9;  // Neon blue
+//     box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
+//   }
+//   50% {
+//     border-top-color: #ffffff;  // White
+//     box-shadow: 0 0 10px #ffffff, 0 0 30px #ffffff, 0 0 60px #00fff9, 0 0 120px #ffffff;
+//   }
+//   100% {
+//     border-top-color: #00fff9;  // Neon blue
+//     box-shadow: 0 0 10px #00fff9, 0 0 30px #00fff9, 0 0 60px #ffffff, 0 0 120px #00fff9;
+//   }
+// }
 
-#company-directory-heading {
-  color: rgb(200, 215, 255);
-  text-shadow: 0 0 4px white, 0 0 3px rgb(113, 234, 255), 0 0 3px rgb(0, 0, 0);
-  text-align: center;  // Centers the text
-  margin-top: 5%;  // Adds some space at the top
-  margin-bottom: -5%;
-  // margin-bottom: 10px;  // Adds some space at the bottom
-  font-size: 4em;  // Sets the font size
-  // font-weight: bold;  // Makes the text bold
-}
+
 
 #company-directory-footer {
   text-align: center;
   padding: 20px;
   color: #fff;
+  box-shadow: none;
+  border: none;
 
   p {
+    color: #1d0707;
     margin: 0;
     padding: 0;
     font-size: 1em;
@@ -111,12 +114,12 @@ background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba
     gap: 20px;
 
     a {
-      color: #fff;
+      color: #775959;
       text-decoration: none;
       font-size: 1.5em;  // Increase the font size for bigger icons
 
       &:hover {
-        color: #ccc;
+        color: #1d0707;
       }
     }
   }
@@ -183,17 +186,7 @@ a, button {
 }
 
 
-#main {
-  // background: rgb(9,9,121);
-// background: radial-gradient(circle, rgba(9,9,121,1) 5%, rgba(5,2,54,1) 80%, rgba(5,2,54,1) 80%);
-  margin-top: 10vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  height: 100%;
-  // border: 1px solid white;
-  border-radius: 10px;
-  position: sticky;  
-}
+
 
 .nav-link {
   font-weight: bold;
@@ -223,11 +216,7 @@ nav.navbar {
   }
 }
 
-#header {
-  color: rgb(8, 77, 182);
-  font-weight: bold;
-  font-size: 1.8rem;
-}
+
 
 #tableHead {
   position: sticky;
