--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,7 +1,51 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css';
+/* Loader Styles */
+#loader {
+  position: fixed;
+  border: 1px solid #d4deff;
+  box-shadow: 5px 5px 25px whitesmoke;
+  border-radius: 8px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f9f6ee;
+  opacity: 1;
+  /* Initial opacity */
+  transition: opacity 4s ease-out;
+  /* Transition for opacity change */
+  z-index: 9999;
+  overflow: hidden;
+  /* Hide overflowing text */ }
+
+/* Text Animation Keyframes */
+@keyframes moveText {
+  0% {
+    transform: translateY(200%);
+    /* Start from the central bottom */ }
+  50% {
+    transform: translateY(0%);
+    /* Start from the central bottom */ }
+  100% {
+    transform: translateY(-200%);
+    /* Move up off-screen */ } }
+
+/* Loader Text Styles */
+#loader-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 68px;
+  color: #0f0444;
+  text-shadow: 0 0 3px #0f0444;
+  left: 0%;
+  animation: moveText 5s linear;
+  /* Use animation with a 5s duration */ }
+
 html,
 body {
   background-color: #f9f6ee;
+  font-family: 'Poppins', sans-serif;
   margin: 5px;
   overflow: hidden; }
 
@@ -71,18 +115,6 @@ a, button {
 #searchAndFilter, #icons {
   display: flex; }
 
-#addButton {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  box-shadow: 0 0 2px white;
-  border-radius: 1px; }
-
-nav.navbar {
-  box-shadow: 0px 1px 2px rgba(16, 0, 107, 0.1); }
-  nav.navbar a.navbar-brand {
-    text-shadow: 0 0 2px #0b0a46;
-    transition: 0.3s ease-in-out; }
-
 #tableHead {
   position: sticky; }
 
@@ -91,7 +123,7 @@ nav.navbar {
   .table-wrapper table, .table-wrapper-scroll-y table {
     min-width: 100%; }
     .table-wrapper table th, .table-wrapper table td, .table-wrapper-scroll-y table th, .table-wrapper-scroll-y table td {
-      min-height: 50px;
+      min-height: 30px;
       text-align: center; }
 
 .table-wrapper, .table-wrapper-scroll-y {
@@ -102,7 +134,7 @@ nav.navbar {
     /* Fixed width and centered text for 'Employee Count' column */
     /* Fixed width and centered text for 'Edit/Delete' column */ }
     .table-wrapper table th, .table-wrapper table td, .table-wrapper-scroll-y table th, .table-wrapper-scroll-y table td {
-      min-height: 3.125em;
+      min-height: 2em;
       text-align: center; }
     .table-wrapper table td, .table-wrapper-scroll-y table td {
       text-align: left; }
